          or a thread
        - Properly support "MySQL-style" left-side group_by with prefetch
        - Fix $grouped_rs->get_column($col)->func($func) producing incorrect
          SQL (RT#81127)
        - Stop Sybase ASE storage from generating invalid SQL in subselects
          when a limit without offset is encountered
        - Even more robust behavior of GenericSubQuery limit dialect

0.08210 2013-04-04 15:30 (UTC)
    * New Features / Changes
        - Officially deprecate the 'cols' and 'include_columns' resultset
          attributes
        - Remove ::Storage::DBI::sth() deprecated in 0.08191

    * Fixes
        - Work around a *critical* bug with potential for data loss in
          DBD::SQLite - RT#79576
        - Audit and correct potential bugs associated with braindead reuse
          of $1 on unsuccessful matches
        - Fix incorrect warning/exception originator reported by carp*() and
          throw_exception()

0.08209 2013-03-01 12:56 (UTC)
    * New Features / Changes
        - Debugging aid - warn on invalid result objects created by what
          seems like an invalid inheritance hierarchy

    * Fixes
        - Fix another embarrassing regression preventing correct refining of
          the search criteria on a prefetched relation (broken in 0.08205)
        - Fix incorrect callsite reporting by DBIC::Carp

0.08208 2013-02-20 09:56 (UTC)
    * New Features / Changes
        - A bunch of nonsensically named arguments to the SQL::Translator
          parser have been marked as deprecated (while still fully
          supported)

    * Fixes
        - Fix duplicated selected columns when calling 'count' when a same
          aggregate function is used more than once in a 'having' clause
          (RT#83305)
        - Prevent SQL::Translator::Producer::YAML from seeing the $dbh
          in a potentially connected $schema instance (RT#75394)

    * Misc
        - Fixup our distbuilding process to stop creating world-writable